[gd_scene load_steps=17 format=2]

[ext_resource path="res://Trabalho/Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://Trabalho/Scripts/Nave.gd" type="Script" id=2]
[ext_resource path="res://Trabalho/Assets/Fundo/darkPurple.png" type="Texture" id=3]
[ext_resource path="res://Trabalho/Assets/Naves/playerShip1_orange.png" type="Texture" id=4]
[ext_resource path="res://Trabalho/Scripts/Fundo.gd" type="Script" id=5]
[ext_resource path="res://Trabalho/Assets/Icones/icons8-pixel-heart-48.png" type="Texture" id=6]
[ext_resource path="res://Trabalho/cenas/spawn.tscn" type="PackedScene" id=7]
[ext_resource path="res://Trabalho/Scripts/camera.gd" type="Script" id=8]
[ext_resource path="res://Trabalho/Scripts/cenario.gd" type="Script" id=9]
[ext_resource path="res://Trabalho/Assets/Icones/cc9ed077aed46f5.png" type="Texture" id=10]

[sub_resource type="Shader" id=7]
code = "shader_type canvas_item;

uniform float vel = .7;
uniform float des = 0; 

void fragment(){
	COLOR = texture(TEXTURE, UV + (vec2(0, -1) * TIME * vel) + vec2(des,0));
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 7 )
shader_param/vel = 0.7
shader_param/des = 0.0

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://Trabalho/Assets/Fonte/upheavtt.ttf"

[sub_resource type="DynamicFont" id=4]
size = 50
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
antialiased = false
font_path = "res://Trabalho/Assets/Fonte/upheavtt.ttf"

[sub_resource type="DynamicFont" id=6]
size = 50
font_data = SubResource( 5 )

[node name="Mundo" type="Node2D"]

[node name="Fundo" type="Sprite" parent="."]
material = SubResource( 2 )
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )
script = ExtResource( 5 )
nave = NodePath("../Nave")

[node name="cenario" type="Node2D" parent="."]
script = ExtResource( 9 )
nave = NodePath("../Nave")

[node name="spawn" parent="cenario" instance=ExtResource( 7 )]

[node name="Nave" type="Area2D" parent="."]
position = Vector2( 270, 880 )
scale = Vector2( 0.75, 0.75 )
collision_mask = 12
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="Nave"]
scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 4 )

[node name="Blaster1" type="Position2D" parent="Nave"]
position = Vector2( 32, -6 )

[node name="Blaster2" type="Position2D" parent="Nave"]
position = Vector2( -33, -6 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Nave"]
polygon = PoolVector2Array( -32, -5.33337, -28, 0, -25.3333, 1.33337, -9.33331, -8, -5.33331, -26.6666, 5.33334, -26.6666, 9.33334, -6.66663, 24, 1.33337, 28, 0, 30.6667, -4, 33.3333, -4, 34.6667, -4, 33.3333, 17.3334, 30.6667, 17.3334, 29.3333, 14.6666, 25.3333, 16, 9.33334, 18.6666, 5.33334, 26.6666, -5.33331, 26.6666, -9.33331, 18.6666, -16, 18.6666, -29.3333, 14.6666, -29.3333, 17.3334, -33.3333, 17.3334, -33.3333, 5.33337, -34.6667, -4 )

[node name="iframe" type="Timer" parent="Nave"]
wait_time = 0.1

[node name="Delay" type="Timer" parent="Nave"]
wait_time = 2.0

[node name="HUD" type="CanvasLayer" parent="." groups=["hud"]]
script = ExtResource( 1 )

[node name="score" type="Label" parent="HUD"]
anchor_right = 0.111
anchor_bottom = 0.015
margin_left = 9.0
margin_top = 882.0
margin_right = 260.14
margin_bottom = 938.6
custom_fonts/font = SubResource( 4 )
text = "0"
valign = 1

[node name="hp" type="Label" parent="HUD"]
margin_left = 440.0
margin_top = 891.0
margin_right = 549.0
margin_bottom = 986.0
custom_fonts/font = SubResource( 6 )
text = "5
"
align = 1

[node name="Sprite" type="Sprite" parent="HUD"]
position = Vector2( 445, 919 )
texture = ExtResource( 6 )

[node name="shield" type="Sprite" parent="HUD"]
position = Vector2( 491, 872 )
scale = Vector2( 0.155556, 0.155555 )
texture = ExtResource( 10 )

[node name="camera" type="Camera2D" parent="." groups=["camera"]]
anchor_mode = 0
current = true
script = ExtResource( 8 )

[connection signal="area_entered" from="Nave" to="Nave" method="_on_Nave_area_entered"]
[connection signal="area_entered" from="Nave" to="camera" method="_on_Nave_area_entered"]
[connection signal="timeout" from="Nave/iframe" to="Nave" method="_on_iframe_timeout"]
[connection signal="timeout" from="Nave/Delay" to="Nave" method="_on_Delay_timeout"]
